# alert-triage-rag

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  chunk.py  docker-compose.yml  ingest.py  pyproject.toml  query.py  requirements.txt  retrieve.py  schema.py  stix.py
.github/workflows/: ci.yml  release.yml
corpus/runbooks/: 02_encoded_powershell.md  03_lsass_credential_dumping.md  04_persistence_task_service.md  05_impossible_travel_signin.md  06_outbound_c2_infrastructure.md
packaging/: README.md  alert-triage-desktop.spec  alert-triage.iss  build_payload.ps1  desktop_entry.py  sitecustomize.py
tests/: __init__.py  conftest.py  test_api.py  test_apiclient.py  test_backend.py  test_chunk.py  test_cli.py  test_desktop.py  test_fingerprint.py  test_paths.py  test_query.py  test_retrieve.py  test_schema.py  test_ui.py
triage/: __init__.py  api.py  apiclient.py  backend.py  chunk.py  cli.py  desktop.py  desktop_launch.py  fingerprint.py  ingest.py  paths.py  query.py  retrieve.py  rewrite.py  schema.py  serve.py  stix.py  ui.py  ui_launch.py
triage/corpus/runbooks/: 01_office_spawns_interpreter.md  07_brute_force_spray.md  08_data_exfiltration.md  09_default_low_signal.md
