# pyproject.toml — the single, standardized (PEP 517/518/621) description of
# how to BUILD and INSTALL this project. `pip install .` reads this file,
# builds a wheel, and installs it — no setup.py, no requirements.txt.
#
# Three tables matter here:
#   [build-system]      -> WHO builds the package (the build backend)
#   [project]           -> WHAT the package is (metadata, deps, entry points)
#   [tool.setuptools.*] -> backend-specific details (which files go in the wheel)

[build-system]
# The build backend is the tool pip delegates to when it needs to turn this
# source tree into a wheel (the installable .whl archive). pip itself never
# builds anything — it reads this table, installs `requires` into an isolated
# temporary environment, and calls the named backend there. setuptools is the
# long-standing default backend; we have no exotic build needs, so it's the
# minimal-dependency choice (see CLAUDE.md). Without this table pip falls back
# to a legacy setuptools path that assumes a setup.py — deprecated and
# eventually an error.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-triage-rag"
version = "0.1.0"
description = "Retrieval-augmented triage assistant for SOC/MDR alerts: MITRE ATT&CK + runbook grounded verdicts with citations."
readme = "README.md"
# The oldest Python this code supports. pip refuses to install onto anything
# older, so users get a clear error instead of a confusing SyntaxError at
# runtime. The 3.11 floor matches CLAUDE.md's fixed stack.
requires-python = ">=3.11"
authors = [{ name = "Mario" }]
keywords = ["rag", "soc", "triage", "mitre-attack", "security"]

# Runtime dependencies, migrated from requirements.txt (now retired — this
# list is the single source of truth). Pins are tested starting points; bump
# deliberately. pip installs these automatically alongside the package, which
# is what makes `pipx install .` work on a machine that has none of them.
dependencies = [
    # Local embeddings: bge-small-en-v1.5 via sentence-transformers (no API
    # calls). Pulls in torch + transformers transitively (left unpinned —
    # large, platform specific).
    "sentence-transformers==5.6.0",
    # Vector store, persisted under the per-user data dir (see triage/paths.py)
    "chromadb==1.5.9",
    # Generation via the Anthropic API (Claude) + the pre-retrieval query rewrite
    "anthropic==0.116.0",
    # Output validation — the schema.py contract
    "pydantic==2.13.4",
    # Per-user data directory resolution (%LOCALAPPDATA% on Windows,
    # ~/.local/share on Linux, ~/Library/Application Support on macOS) so an
    # installed CLI never assumes a repo checkout.
    "platformdirs==4.10.0",
]

# Optional dependency groups ("extras"). NOT installed by default: a user who
# `pipx install`s the app never downloads test/lint tooling. Contributors opt
# in with `pip install -e ".[dev]"` — the [dev] suffix names the group below.
# Keeping the group here (not a separate requirements-dev.txt) means one file
# defines every environment this project has, with the same pinning
# convention: pins are tested starting points, bump deliberately.
[project.optional-dependencies]
dev = [
    # Test runner: discovers tests/, runs them, reports failures with
    # introspected assert output (no assertEqual boilerplate needed).
    "pytest==9.1.1",
    # Linter (+ import sorter). One fast tool covering the pycodestyle/
    # pyflakes/isort/bugbear rule families — configured in [tool.ruff] below.
    "ruff==0.15.20",
    # Static type checker: verifies the type hints (which CLAUDE.md mandates
    # everywhere) actually hold together across module boundaries.
    "mypy==2.2.0",
]

# Entry points: the reason `triage` exists as a real command after install.
# At install time pip generates a tiny executable shim (triage.exe on Windows)
# on the environment's PATH that imports triage.cli and calls main(). Without
# this table the only way to run the app is `python -m ...` from a checkout.
[project.scripts]
triage = "triage.cli:main"

[tool.setuptools.packages.find]
# Only the `triage` package ships in the wheel. Explicit include so top-level
# repo directories (corpus/, build/, chroma_db/) can never leak into an
# install by accident.
include = ["triage*"]

[tool.setuptools.package-data]
# Non-code files to bundle INSIDE the installed package. The runbooks are part
# of the product (the corpus the app retrieves from), so they ship in the
# wheel and are read back via importlib.resources — which works whether the
# package is installed normally, installed editable, or run from the repo.
triage = ["corpus/runbooks/*.md"]

# --- Dev tool configuration -------------------------------------------------
# pyproject.toml doubles as the config file for the dev tools (each reads its
# own [tool.<name>] table) — one file instead of .ruff.toml + mypy.ini +
# pytest.ini, and the config travels with the package definition.

[tool.ruff]
# Ruff infers its Python-version target from `requires-python` above and
# already excludes .venv/, build/, dist/ by default, so only the rule
# selection needs saying.

[tool.ruff.lint]
# Rule families, by their historical tool of origin:
#   E/W = pycodestyle (style errors/warnings: indentation, whitespace, ...)
#   F   = pyflakes (real defects: undefined names, unused imports/variables)
#   I   = isort (import blocks sorted + grouped stdlib/third-party/local)
#   B   = flake8-bugbear (likely bugs: mutable default args, useless raise, ...)
#   UP  = pyupgrade (idioms the requires-python floor makes available)
# Ruff's default is only E4/E7/E9 + F; opting into the rest is deliberate —
# each family either catches real bugs (F, B) or removes a whole class of
# review nitpicks (E/W, I, UP) so humans never argue about them.
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Findings in author-owned/paired files whose fixes CHANGE BEHAVIOR are
# ignored here instead of applied — per the division-of-labor rule they are
# proposed to the author (see PLAN.md decisions log), not decided by lint:
#   B905  (retrieve.py): zip(..., strict=True) would make retrieval raise on
#         mismatched parallel lists from Chroma — fits fail-loudly, but it's
#         the author's retrieval loop.
#   UP042 (schema.py): (str, Enum) -> StrEnum changes str(member) output;
#         schema.py is the paired output contract.
# Remove the entry once the author applies or rejects the change.
"triage/retrieve.py" = ["B905"]
"triage/schema.py" = ["UP042"]

[tool.mypy]
# What to check. Explicit so mypy never wanders into .venv/ or build/ (the
# build/ copy of the package would otherwise collide with triage/ as a
# duplicate module named "triage").
files = ["triage", "tests"]
# NO python_version pin, deliberately. Pinning "3.11" here would make mypy
# apply 3.11 syntax rules to EVERYTHING it reads — including type stubs
# inside installed dependencies. Newer numpy stubs use PEP 695 `type`
# statements (3.12+ syntax), so the pin broke CI's 3.14 job on numpy's own
# files. Each environment checks against its own interpreter instead; the
# 3.11 floor is still enforced because CI's matrix includes a real 3.11 job.
# CLAUDE.md mandates type hints everywhere; this makes mypy enforce that
# instead of silently skipping unannotated functions (its default).
disallow_untyped_defs = true
# A `# type: ignore` that no longer suppresses anything is stale noise —
# usually left behind by a dependency upgrade. Flag it so it gets removed.
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Untyped third-party libraries: they ship no type information, so mypy would
# otherwise error on every `import sentence_transformers`. This narrows the
# concession to exactly these modules — their objects are typed as Any —
# instead of the blunt global ignore_missing_imports, which would also
# silence typos in OUR import statements.
module = ["sentence_transformers.*", "transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Author-owned modules with type-stub friction, NOT bugs: chromadb types
# query/get results as Optional (presence depends on the include= argument,
# which the code always passes) and as TypedDict/Mapping where the code says
# dict; transformers types tokenizer.decode() as str | list[str]. The precise
# fixes (narrowing asserts or targeted `# type: ignore[code]` comments) edit
# author-owned code, so they are proposed in PLAN.md instead of applied.
# Trade-off, deliberately accepted until then: these error CODES are blind in
# these two MODULES only — everything else stays fully checked. Remove each
# entry when the author lands the real fix.
module = ["triage.retrieve"]
disable_error_code = ["arg-type", "return-value", "dict-item"]

[[tool.mypy.overrides]]
module = ["triage.chunk"]
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
# Where tests live. Without this, pytest walks the whole repo looking for
# test_*.py files — slower, and it can pick up strays (e.g. inside .venv).
testpaths = ["tests"]
